<resources>
    <string name="app_name">RedChain</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="dont_break_the_chain">Complete your goal today. Check this box. Complete your goal tomorrow. Check this box. Complete your goal the next day. Check this box. Don\'t break the chain.</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    
    <string name="stats_current_chain">Chain Length</string>
    <string name="stats_best_in_chain">Longest this chain has ever been.</string>
    <string name="stats_all_chains_best">Longest any chain has ever been.</string>

    <string name="pro_feature_title_template">%1$s is a Pro Feature!</string>
    <string name="go_pro_action">Go Pro Now!</string>
    <string name="toast_routing_to_pro_version_msg">Launching Pro Version</string>
    <string name="toast_data_migration">Your free version chain has been imported! Thanks for going pro!</string>
    <string name="chain_free_version_title_template">%1$s (imported)</string>
    <string name="day_one_message">That\'s it. You\'ve done your job for today. Come back tomorrow when you\'ve completed your goal. If you skip a day, you start from scratch. Don\'t break the chain. </string>

    <string name="chains">Chains</string>
    <string name="create_chain">New Chain</string>
    <string name="chain_title_hint">Chain Title</string>
    <string name="chain_color">Chain Color</string>
    <string name="edit_chain">Edit Chain</string>
    <string name="delete_chain">Delete Chain</string>
    <string name="delete">Delete</string>
    <string name="delete_chain_confirm">Are you sure you want to delete this chain forever?</string>

    <string name="ad_explainer">Ads are shown when you are viewing a chain that has been broken. When the current chain exceeds the maximum length of your past broken chains, this ad will disappear. If you never want see ads, please consider purchasing RedChain Pro."</string>

    <string name="day_num">Day %1$d</string>
    <plurals name="days_and_counting">
        <item quantity="one">Day and counting.</item>
        <item quantity="other">Days and counting.</item>
    </plurals>

    <string name="error_invalid_title">You must supply a valid title</string>

    <string name="visit_website">Visit Hot PoData</string>
    <string name="visit_website_blurb">Visit our website, read our blog, get updates.</string>
    <string name="website_url">http://www.hotpodata.com</string>

    <string name="follow_us_on_twitter">Follow us on twitter</string>
    <string name="twitter_handle">\@hotpodata</string>
    <string name="twitter_url">https://twitter.com/hotpodata</string>

    <string name="fork_redchain_on_github">Fork RedChain on github</string>
    <string name="github_url">https://github.com/hotpodata/redchain</string>

    <string name="apps">Our other apps</string>
    <string name="filecat">FileCat</string>
    <string name="filecat_desc">Browse files in a colorful way!</string>
    <string name="wikicat">WikiCat</string>
    <string name="wikicat_desc">Browse Wiki Encyclopedia in a colorful way!</string>
    <string name="baconmasher">BaconMasher</string>
    <string name="baconmasher_desc">One part reddit images, one part reddit comments, mash mash mash!</string>

    <string name="actions">Actions</string>
    <string name="reset_today">Reset Today Only</string>
    <string name="reset_chain">Reset Chain</string>
    <string name="reset_chain_blurb">This will clear the chain. This action is irreversible.</string>
    <string name="reset_chain_confirm">Are you sure you want to reset this chain?</string>
    <string name="version_template">V%1$s by Hot PoData</string>

    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>

    <string name="go_pro_create_edit">Chain Customization</string>
    <string name="go_pro_create_edit_blurb">Create, Edit, Delete and customize your chains! Please support indie developers! Go Pro!</string>


    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="daily_reminder">Daily Reminder</string>
    <string name="broken_chain">Broken Chain</string>

    <string name="notif_radio_completion_time">Notify me tomorrow at the time I completed my task today.</string>
    <string name="notif_radio_completion_time_broken">Notify me after the chain breaks at the time I completed my task today.</string>
    <string name="notif_radio_custom_time_template">Custom time %1$s</string>

    <string name="notifications_heading">Notifications</string>
    <string name="notification_reminder_text">Keep your chain alive. Complete your goal everyday. No excuses.</string>
    <string name="notification_broken_title">Broken Chain!</string>
    <string name="notification_broken_text_template">%1$s has broken. Don\'t get discouraged. Start again. Take it one day at a time.</string>

    <string name="this_app">This App</string>
    <string name="rate_us">Rate this app</string>
    <string name="rate_us_blerb_template">Help spread the %1$s word!</string>
    <string name="contact_email_addr_template">hotpodata+%1$s@gmail.com</string>
    <string name="contact_the_developer">Contact the developer</string>

    <string name="legal_heading">Legal</string>
    <string name="legal_blurb">This software application is provided as is. Its creator(s) take no responsibility for consequences of its installation or use.</string>

    <string name="acknowledgements">Acknowledgements</string>
    <string name="timber">Timber</string>
    <string name="timber_license">@string/license_apache</string>
    <string name="timber_url">https://github.com/JakeWharton/timber</string>

    <string name="joda">Joda-Time</string>
    <string name="joda_license">@string/license_apache</string>
    <string name="joda_url">http://www.joda.org/joda-time/</string>

    <string name="license_apache">Apache 2.0</string>


</resources>
