<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1">

    <ScrollView
        android:id="@+id/content_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/keyline_one">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/keyline_one"
                app:errorEnabled="true"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/chain_title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/chain_title_hint"
                    android:inputType="textCapWords"
                    android:textSize="56dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/chain_color_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginLeft="@dimen/keyline_one"
                android:layout_marginRight="@dimen/keyline_one"
                android:choiceMode="singleChoice"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/keyline_one"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/notifications_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/keyline_one"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/notifications_heading"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/notif_daily_reminder_enabled_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_one"
                android:layout_marginTop="8dp"
                android:checked="true"
                android:text="@string/daily_reminder" />

            <RadioGroup
                android:id="@+id/radiogroup_notif_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_one"
                android:layout_marginBottom="8dp"
                android:checkedButton="@+id/radio_reminder_complete_time"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_reminder_complete_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_radio_completion_time" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_reminder_custom_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_radio_custom_time_template" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/notif_broken_chain_enabled_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_one"
                android:layout_marginTop="@dimen/keyline_one"
                android:checked="true"
                android:text="@string/broken_chain" />

            <RadioGroup
                android:id="@+id/radiogroup_notif_broken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/keyline_one"
                android:layout_marginBottom="@dimen/keyline_one"
                android:checkedButton="@+id/radio_broken_complete_time"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_broken_complete_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_radio_completion_time_broken" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/radio_broken_custom_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_radio_custom_time_template" />
            </RadioGroup>


        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/primary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/keyline_one"
        android:clickable="true"
        android:src="@drawable/ic_save_24dp"
        android:tint="#FFFFFF"
        app:backgroundTint="@color/accent"
        app:layout_anchor="@id/toolbar"
        app:layout_anchorGravity="bottom|right|end" />


</android.support.design.widget.CoordinatorLayout>

